Add dynamic consumergroup id

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,3 @@
-# App Config
-
 akka {
   kafka.producer {
     close-timeout = 60s
@@ -10,8 +8,6 @@ akka {
       linger.ms = 1
       buffer.memory = 33554432
       max.block.ms = 5000
-      security.protocol = "SSL"
-      ssl.client.auth = "required"
     }
   }
   kafka.consumer {
@@ -22,18 +18,12 @@ akka {
     commit-timeout = 15s
     wakeup-timeout = 5s
     kafka-clients {
-      security.protocol = "SSL"
-      ssl.client.auth = "required"
-      enable.auto.commit = true
+      enable.auto.commit = false
     }
   }
 }
 
-kafka.url = ${KAFKA_URL}
-kafka.prefix = ${?KAFKA_PREFIX}
-
-play.http.secret.key = "changeme"
-play.http.secret.key = ${?CRYPTO_SECRET}
+play.http.secret.key = "@pp1ic@ti0n"
 
 play.i18n.langs = ["en"]
 
